frontend/src/rust-engine/build_log.txt
    Checking rust-mermaidman-engine v0.1.0 (D:\mine\rust-mermaid\rust-engine)
warning: unused imports: `alpha1`, `branch::alt`, `char`, `line_ending`, `many0`, `many1`, `map`, `multispace0`, `multispace1`, `opt`, `pair`, `preceded`, `recognize`, `rest`, `separated_list0`, `separated_pair`, `terminated`, `tuple`, `u32`, and `verify`
 --> src\lib.rs:5:27
  |
5 |     character::complete::{alpha1, alphanumeric1, digit1, multispace0, multispace1, space0, space1, char, line_ending, u32},
  |                           ^^^^^^                         ^^^^^^^^^^^  ^^^^^^^^^^^                  ^^^^  ^^^^^^^^^^^  ^^^
6 |     combinator::{map, opt, recognize, verify, rest},
  |                  ^^^  ^^^  ^^^^^^^^^  ^^^^^^  ^^^^
7 |     sequence::{delimited, pair, preceded, separated_pair, tuple, terminated},
  |                           ^^^^  ^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^^
8 |     branch::alt,
  |     ^^^^^^^^^^^
9 |     multi::{many0, many1, separated_list0},
  |             ^^^^^  ^^^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HashSet`
  --> src\lib.rs:13:33
   |
13 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `console_error_panic_hook`
  --> src\lib.rs:39:13
   |
39 |     let _ = console_error_panic_hook::set_once();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `console_error_panic_hook`
   |
   = help: if you wanted to use a crate named `console_error_panic_hook`, use `cargo add console_error_panic_hook` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_wasm_bindgen`
  --> src\lib.rs:49:5
   |
49 |     serde_wasm_bindgen::to_value(&result).unwrap()
   |     ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `serde_wasm_bindgen`
   |
help: there is a crate or module with a similar name
   |
49 -     serde_wasm_bindgen::to_value(&result).unwrap()
49 +     wasm_bindgen::to_value(&result).unwrap()
   |

warning: unused variable: `arrow_part`
   --> src\lib.rs:207:17
    |
207 |     let (input, arrow_part) = take_while1(|c: char| "-.>=".contains(c) || c == '|' || c == ' ' || c.is_alphanumeric())(input)?; 
    |                 ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_arrow_part`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `rust-mermaidman-engine` (lib) generated 3 warnings
error: could not compile `rust-mermaidman-engine` (lib) due to 2 previous errors; 3 warnings emitted
